--- a/security-custom-filter/src/main/resources/templates/index.html
+++ b/security-custom-filter/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Any-Security | SpringForAll - Spring Security</title>
-    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet"> </link>
 
     <style>
         body {
